# compare-dir-py

./: README.md  pyproject.toml
src/compare_dir/: comparer.py
