[project]
name = "compare-dir"
dynamic = ["version"]
description = "Tool to compare files in two directories"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "tqdm>=4.67.3",
]

[project.urls]
repository = "https://github.com/kojiishi/compare-dir"

[project.scripts]
compare-dir = "compare_dir.comparer:main"

[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=9.2"]

[tool.setuptools_scm]
# https://github.com/pypa/setuptools-scm
version_file = "src/compare_dir/_version.py"
